[package]
name = "mtp"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]
build = "build.rs"

[workspace]
members = ["rust-src/libmtp-sys/"]

[lib]
name = "mtp"
path = "rust-src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[dependencies]
libc = "0.2"
libmtp-sys = { version = "0.1.0", path = "rust-src/libmtp-sys/" }

[build-dependencies]
cmake = "0.1.20"
