add_library(utils pathutils.c util.c delfile.c getfile.c sendtr.c sendfile.c newfolder.c)
target_link_libraries(utils mtp)
target_include_directories(utils PRIVATE "../include")

macro(add_mtp_example exname)
    add_executable(mtp-${exname} ${exname}.c)
    target_link_libraries(mtp-${exname} mtp utils)
    target_include_directories(mtp-${exname} PRIVATE "../include")
endmacro(add_mtp_example)

add_mtp_example(albumart)
add_mtp_example(albums)
add_mtp_example(connect)
add_mtp_example(detect)
add_mtp_example(emptyfolders)
add_mtp_example(files)
add_mtp_example(filetree)
add_mtp_example(folders)
add_mtp_example(format)
add_mtp_example(getplaylist)
add_mtp_example(newplaylist)
add_mtp_example(playlists)
add_mtp_example(reset)
add_mtp_example(thumb)
add_mtp_example(tracks)
add_mtp_example(trexist)
